<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Authentication.Login_Activity">

        <RelativeLayout
            android:id="@+id/imageView_icon"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_login">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/person_3"
                android:adjustViewBounds="true"
               android:layout_centerInParent="true"/>



        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView_icon"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/textview_layout_bg"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:src="@drawable/user"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/view_login" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/transparent"
                    android:hint="@string/email"
                    android:inputType="textWebEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/textView_login"
                    android:textColorHint="@color/textView_hint_login"
                    android:theme="@style/editText_style"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/textview_layout_bg"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingTop="8dp"
                    android:paddingBottom="12dp"
                    android:src="@drawable/password" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/view_login" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/textView_login"
                    android:textColorHint="@color/textView_hint_login"
                    android:theme="@style/editText_style"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_remember"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="2dp"
                    android:text="@string/remember_me"
                    android:textColor="@color/textView_login"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:weightSum="2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_login_activity"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="2"
                    android:text="@string/button_text_login"
                    app:cornerRadius="25dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    app:backgroundTint="@color/yellow"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_skip_login_activity"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:visibility="gone"
                    app:cornerRadius="25dp"
                    android:onClick="set"
                    app:backgroundTint="@color/yellow"
                    android:textColor="@color/black"
                    android:text="@string/button_text_skip"
                    android:textStyle="bold" />

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/forgetBn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="end"
                android:text="@string/textView_forget_password"
                android:textColor="@color/textView_login"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/googleLoginBn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/button_google_bg"
                android:gravity="center"
                android:padding="5dp">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/google_ic" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:text="@string/google_login"
                    android:textColor="@color/textView_login"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/facebookLoginBn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/facebook_button_bg"
                android:gravity="center"
                android:padding="5dp">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/facebook_ic" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:text="@string/facebook_login"
                    android:textColor="@color/textView_login"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:visibility="gone" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_an_account"
                    android:textColor="@color/textView_login"
                    android:textSize="16sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="  " />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView_register_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_text_register"
                    android:onClick="Register"
                    android:textColor="@color/textView_app_color"
                    android:textSize="18sp"/>

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</ScrollView>