<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".Fragment.Gif_Upload_Fragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:textStyle="bold"
        app:titleTextColor="@color/white"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_ad_gif_upload"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:id="@+id/ll_main_gif_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:clipToPadding="true"
                    app:cardCornerRadius="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_gif_upload"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/transparent"
                        android:hint="@string/entergiftitle"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@color/textView_upload"
                        android:textColorHint="@color/textView_hint_upload"
                        android:theme="@style/editText_style"
                        android:textSize="16sp" />

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView_gif_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clipToPadding="true"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:id="@+id/ll_gif_upload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textView_add_gif_upload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/add_gif_file"
                        android:textColor="@color/textView_app_color"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageView_gif_upload"
                        android:layout_width="280dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:src="@android:drawable/ic_menu_gallery"
                       android:adjustViewBounds="true"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:clipToPadding="true"
                    app:cardCornerRadius="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <Spinner
                            android:id="@+id/spinner_category"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@color/transparent"
                            android:prompt="@string/app_name" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="10dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/down_arrow"
                            app:tint="@color/dropdown_arrow" />


                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:textColor="@color/textView_upload"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:clipToPadding="true"
                    app:cardCornerRadius="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <Spinner
                            android:id="@+id/spinner_language"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@color/transparent"
                            android:prompt="@string/app_name" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="10dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/down_arrow"
                            app:tint="@color/dropdown_arrow" />


                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tag"
                android:textColor="@color/textView_upload"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clipToPadding="true"
                app:cardCornerRadius="5dp">

                <com.hootsuite.nachos.NachoTextView
                    android:id="@+id/tag_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/hint_tag"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:textColorHint="@color/textView_hint_upload"
                    android:theme="@style/editText_style"
                    app:chipBackground="@color/textView_app_color"
                    app:chipHeight="28dp"
                    app:chipTextColor="@color/white"
                    app:chipTextSize="16dp" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_gif_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                app:backgroundTint="@color/button_bg"
                app:cornerRadius="20dp"
                android:text="@string/upload"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_ad_gif_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" />

</RelativeLayout>